0.1605
  changed arguments of tag processor
  remaned DBIx::Custom::QueryBuilder::TagProcessors functions
0.1604
  changed argument of tag processor(not backword compatible)
  renamed default_query_filter to default_bind_filter(not backword compatible)
  renamed DBIx::Custom::SQLTemplate to DBIx::Custom::SQLBuilder(not backword compatible)
  renamed create_query to build_query(not backword compatible)
  renamed sql_template to sql_builder(not backword compatible)
  removed DESTROY method(not backword compatible)
  removed disconnect method(not backword compatible)
  fixed DBIx::Custom::MySQL connect_memory
0.1603
  removed DBIx::Custom commit method (not backword compatible)
  removed DBIx::Custom rollback method (not backword compatible)
  removed DBIx::Custom auto_commit method (not backword compatible)
0.1602
  added cache_method attribute
0.1601
  added cache attribute
  select, insert, update, update_all, delete, delete_all, execute only receive hash argument(not backword compatible)
0.1503
  removed reconnect method
  removed connected method
  removed reconnect_memroy method
  renamed fetch_single to fetch_first
  renamed fetch_hash_single to fetch_hash_first
  updated document
0.1502
  added commit method
  added rollback method
  changed select argument, added relation option
  moved host attribute to DBIx::Custom::MySQL
  moved port attribute to DBIx::Custom::MySQL
  moved database attribute to DBIx::Custom::MySQL and DBIx::Custom::SQLite
0.1501
  removed register_format()
  removed formats()
  removed run_transaction()
  removed create_table()
  removed drop_table()
  changed select() arguments
  changed insert() arguments
  changed update() arguments
  changed update_all() arguments
  changed delete() arguments
  changed delete_all() arguments
  changed execute() arguments
0.1402
  remove finish(), error()
  can receive code ref to filter()
  renamed resist to register
0.1401
  renamed fetch_rows to fetch_multi